<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/top_title"
        layout="@layout/activity_base_top_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@string/activity_title_weight" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@string/activity_body_weight">

        <com.techfly.demo.selfview.FlexibileScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:textColor="@color/text_font_black"
                    android:textSize="@dimen/size_middle"
                    android:text="@string/login_register_text"
                    />

            </LinearLayout>
        </com.techfly.demo.selfview.FlexibileScrollView>
    </LinearLayout>


</LinearLayout>
